updated config page

--- a/src/main/java/com/qa/hubspot/config/config.properties
+++ b/src/main/java/com/qa/hubspot/config/config.properties
@@ -3,6 +3,6 @@ headless = false
 incognito = false
 highlight = true
 url = https://app.hubspot.com/login
-username = kamm.mahi@gmail.com
-password = Selenium@2020
-accountname = mahendra
+username = jackdhokiya@gmail.com
+password = Selenium@12020
+accountname = Janak
